[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://classes/statemachine/statemachine.gd" type="Script" id=3]
[ext_resource path="res://entities/player/states/IDLE.gd" type="Script" id=4]
[ext_resource path="res://entities/player/states/WALK.gd" type="Script" id=5]
[ext_resource path="res://entities/player/states/FALL.gd" type="Script" id=6]
[ext_resource path="res://entities/player/states/JUMP.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0
height = 32.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 40 )

[node name="player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
self_modulate = Color( 0.282353, 0.835294, 0.54902, 1 )
position = Vector2( 0, -40 )
scale = Vector2( 0.75, 1.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -144 )
current = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initialState = NodePath("IDLE")

[node name="IDLE" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="WALK" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="JUMP" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="FALL" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="grabber" type="Area2D" parent="." groups=["player"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="grabber" groups=["player"]]
position = Vector2( 0, -40 )
shape = SubResource( 2 )

[connection signal="area_entered" from="grabber" to="." method="_on_grabber_area_entered"]
[connection signal="area_exited" from="grabber" to="." method="_on_grabber_area_exited"]
